test/files/neg/t908.check
t908.scala:8: error: not found: value makeA
    this(makeA)
         ^
one error found
